# moodtracker

./: .gitignore  README.md  main.py
client/: .gitignore  index.html  package-lock.json  package.json
client/src/: App.js  App.jsx  api.js
client/src/Components/: Navbar.js  Navbar.jsx
client/src/Components/Authentication/: AuthButton.jsx  SignIn.js  SignUp.js
client/src/Components/Axes/: XAxisBox.js  XAxisBox.jsx  YAxisBox.js  YAxisBox.jsx
client/src/Components/Graph/: Graph.js  GraphPrompt.js  GraphPrompt.jsx
client/src/Components/Grid/: Grid.js  Grid.jsx  GridData.js  GridSquare.js  gridStyles.css
client/src/Pages/: AuthPage.jsx  GraphPage.js  GridPage.js  RegisterOrLoginPage.js
server/: .gitignore  alembic.ini  auth.py  database.py  main.py  models.py  moodtracker.db  pyproject.toml  requirements.txt  schemas.py
server/alembic/: env.py
